--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy>=1.24.0
 pynput>=1.7.6
 pyyaml>=6.0
 loguru>=0.7.0
-opencv-python>=4.8.0
+scikit-learn>=1.3.0
 
 # OCR engines
 pytesseract>=0.3.10
