--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,13 @@ dependencies = [
     "pynput>=1.7.6",
     "pyyaml>=6.0",
     "loguru>=0.7.0",
-    "scikit-learn>=1.3.0",
     "pytesseract>=0.3.10",
 ]
 
 [project.optional-dependencies]
+sklearn = [
+    "scikit-learn>=1.3.0",
+]
 easyocr = [
     "easyocr>=1.7.0",
     "torch>=2.0.0",
