--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ numpy>=1.24.0
 pynput>=1.7.6
 pyyaml>=6.0
 loguru>=0.7.0
-scikit-learn>=1.3.0
-
-# OCR engines
 pytesseract>=0.3.10
+
+# Optional: Scikit-learn for advanced confidence modeling
+# scikit-learn>=1.3.0
 
 # Optional: EasyOCR backend (large downloads ~500MB)
 # easyocr>=1.7.0
@@ -16,4 +16,3 @@ pytesseract>=0.3.10
 
 # Development
 pytest>=7.4.0
-
