--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dependencies = [
 sklearn = [
     "scikit-learn>=1.3.0",
 ]
+correction = [
+    "symspellpy>=6.7.7",
+]
 easyocr = [
     "easyocr>=1.7.0",
     "torch>=2.0.0",
