--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,13 @@ pytesseract>=0.3.10
 # Optional: Scikit-learn for advanced confidence modeling
 # scikit-learn>=1.3.0
 
+# Optional: Enhanced spell correction (recommended)
+# symspellpy>=6.7.7
+
 # Optional: EasyOCR backend (large downloads ~500MB)
 # easyocr>=1.7.0
 # torch>=2.0.0
 # torchvision>=0.15.0
 
 # Development
-pytest>=7.4.0
+# pytest>=7.4.0
